<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:padding="20dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bookpop_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/read_dialog_bg"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_pre"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/read_setting_pre"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <SeekBar
                android:id="@+id/sb_progress"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:max="10000"
                android:maxHeight="1dp"
                android:progressDrawable="@drawable/mo_aotao_reader_pop_seekbar"
                android:thumb="@drawable/mo_aotao_reader_pop_seekbar_thumb"/>

            <TextView
                android:id="@+id/tv_next"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/read_setting_next"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/tv_directory"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/mo_aotao_reader_directory"
                android:gravity="center"
                android:text="@string/read_setting_directory" />

            <TextView
                android:id="@+id/tv_dayornight"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/mo_aotao_reader_dayornight"
                android:gravity="center"
                android:text="@string/read_setting_night"
                 />

            <TextView
                android:id="@+id/tv_pagemode"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/mo_aotao_reader_pagemode"
                android:gravity="center"
                android:text="@string/read_setting_pagemode" />

            <TextView
                android:id="@+id/tv_setting"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/mo_aotao_reader_setting"
                android:gravity="center"
                android:text="@string/read_setting_set" />

            <TextView
                android:id="@+id/tv_download"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/mo_aotao_reader_download"
                android:gravity="center"
                android:text="@string/read_setting_download" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

